charts/default/paperless/templates/deploy.yaml
# Source: paperless/charts/paperless/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  labels:
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: paperless
    app.kubernetes.io/version: 1.8.0
    helm.sh/chart: paperless-9.1.3
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
        app.kubernetes.io/instance: paperless
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: paperless
          image: "ghcr.io/paperless-ngx/paperless-ngx:2.18.0@sha256:13ef2894816c68672367acb75e896d8eb2ab8057e5059d39ae93f80d49ab8725"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources:
            limits:
              memory: 8G
            requests:
              cpu: 300m
              memory: 4G
      volumes:
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume-zfs
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data-zfs
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media-zfs
