charts/default/paperless/templates/default.yaml
# Source: paperless/charts/paperless/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  labels:
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: paperless
    app.kubernetes.io/version: 1.8.0
    helm.sh/chart: paperless-9.1.3
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/instance: paperless
